--- a/finalproblem.html
+++ b/finalproblem.html
@@ -7,41 +7,41 @@
 <link rel="stylesheet" type="text/css" href="finalproject.css">
 
 </head>
-<body>
+<body class="bodyp">
 
 
 
-<header> 
-Final Project: Ethical Dilemma
+<header class="headerprob"> 
+Final Project: FUTURE CAREER CHOICE
 </header>
    
 
 
-  <nav> 
+  <nav class="navprob"> 
   On this page you will be reading about an Ethical dilemma.
  </nav>
 
 
-<aside class="sideleft"> 
+<aside class="siderprob"> 
 </aside>
 
-<main>
+<main class="mainprob">
 </main>
 
 
-<aside class="sideright"> 
+<aside class="siderprob"> 
 
 <p class="links"><a href= "finalhome.html">Take me to HOME</a> </p>
 
 <p class="links"><a href= "finalabout.html">Take me to ABOUT</a> </p>
 
-<p class="links"><a href= "finalproblem.html">Take me to a DILEMMA</a> </p>
+<p class="links"><a href= "finalproblem.html">Take me to a CAREER</a> </p>
 
 </aside>
 
 
 
-<section class= "maintwo">
+<section class= "maintwoprob">
 </section>
 
 
@@ -50,7 +50,7 @@ Final Project: Ethical Dilemma
 
 
 
-<footer>
+<footer class="footprob">
 </footer>
 
 
