--- a/finalhome.html
+++ b/finalhome.html
@@ -19,32 +19,61 @@ Final Project Home Page!
 
 
   <nav> 
-  <p> Hello world. This website
+  <p> Hello world. This website will be covering an Ethical Dilemma (page 3 on the nav bar), talking about myself 
+  and my life (page 2/ABOUT), and about why I enjoy Exploring CS(page 1/HOME)</p>
  </nav>
 
 
-<aside class="sideleft"> 
-</aside>
+<aside class="siderr"> 
 
-<main>
-</main>
-
-
-<aside class="sideright"> 
 <p> Navigation </p>
 
 <p class="links"><a href= "finalhome.html">Take me to HOME</a> </p>
-
 <p class="links"><a href= "finalabout.html">Take me to ABOUT</a> </p>
+<p class="links"><a href= "finalproblem.html">Take me to a CAREER</a> </p>
 
-<p class="links"><a href= "finalproblem.html">Take me to a DILEMMA</a> </p>
+
+
+</aside>
+
+
+
+
+<main>
+<p> This website is made for Exploring Computer Science, taught by Mr.Platt at Covina High. Attending this class comes with
+a funny story. When enrolling for High School in August of 2016, I was handed my class schedule. On this schedule it contained a 
+class called Gen Tech in first period. My father accompanied me to the counselors office, because we had to switch me out of Chinese
+and into another language class, such as Spanish or ASL. Whilst speaking with the counselor, my father asks, "Now what the heck is 
+'General Technology' anyways?" The counselor responds, "No sir, that is 'Generational Technology.' They're going to be playing with drones
+and other types of technology of the current generation." Me and my dad simply smile and nod, while on the inside we are screaming with
+joy at the top of our lungs. I think, 'Oh my god, this class will be so much fun, and a great start to the day,' and it is. I enjoy just 
+about every minute of this class, and sets me up to have a great day.</p>
+</main>
+
+
+
+
+
+<aside class="sideright"> 
+<h1 class="siderhead"> Would I recommend ECS? </h1>
+<p> Expoloring Computer science is and intensely personal decision. I started off with a great insite into what ECS would be, but for other
+people this might not be your class. However, this can lead to a great first period for the year. The world now is simply survival of the 
+fittest. Colleges accept the strongest individuals, and with a few years of Computer Science or GenTech, can give you an edge over the next 
+person in line. It's now up to you.</p>
 
 </aside>
 
 
 <footer>
+<p> In the next page you will learn all about me, Tyler Lokar. You will be learning about my hobbies, dreams and aspirations, and how my early
+child hood shaped me into the man I am today. </p>
 </footer>
 
 
+<section class="imghome">
+<img href="CS.jpg" height= "300" width="762"/>
+</section
+
 </body>
 </html>
+
