--- a/finalabout.html
+++ b/finalabout.html
@@ -8,48 +8,56 @@
 <link rel="stylesheet" type="text/css" href="finalproject.css">
 
 </head>
-<body>
+<body class="bodya">
 
 
 
-<header> 
+<header class="headerabt"> 
 Final Project ABOUT Page!
 </header>
    
 
 
-  <nav> 
-  This page is all about me! On this section of my final project you will learn
+  <nav class="navabt"> 
+  This page is all about me! On this section of my final project you will learn the many many things that make me who I am today.
  </nav>
 
 
-<aside class="sideleft"> 
+<aside class="sidelabt"> 
+<h1 class="hdodger"> DODGERS </h1>
+<p class="pdodger"> Without a doubt, I am a huge baseball fan, and a huge fan of the Los Angeles Dodgers. I have been a fan ever since I can
+remember. In fact, one of my earliest memories was bonding with my 9-year old little league team, sitting in the reserve level down by right
+field. It seemed so far away, did home plate. The field seemed to never end, the possibilities were endless. The little kid of me looked upon 
+the baseball diamond with gleaming eyes, simply dreaming of playing on that field one day.</p>
 </aside>
 
-<main>
+<main class="mainabt">
+<h1> Who am I?</h1>
+<p>First off my name is Tyler Scott Lokar. My parents knew my middle name long before my first day on this Earth. Scott comes from my uncle (my
+mothers brother), Scott Roberson, who fought cancer and fortunately emerged victorious. My first name was decided simply due to the fact that it
+flowed well as a whole. From an early age I was hanging around adults, which allowed me to mature at an early age. Ironically I am still a mirror
+of that immature little boy I once was. My mother and I are very immature, and we crack immature, silly, and borderline inappropriate jokes with
+eachother. Both of my parents work part time. My Mom works as an instructional aid as Las Palmas MS. She loves working with special needs 
+children. My father is a public speaker, and essentially "coaches coaches". He works for PCA, Positive Coaching Allience, and the companies
+commercial was even in the super bowl! I love my siblings, I have one brother who coaches at Pomona Pitzer College, and two sisters. <p>
 </main>
 
 
-<aside class="sideright"> 
+<aside class="siderabout"> 
 
 <p class="links"><a href= "finalhome.html">Take me to HOME</a> </p>
 
 <p class="links"><a href= "finalabout.html">Take me to ABOUT</a> </p>
 
-<p class="links"><a href= "finalproblem.html">Take me to a DILEMMA</a> </p>
+<p class="links"><a href= "finalproblem.html">Take me to a CAREER</a> </p>
 
 </aside>
 
 
 
-<section class= "maintwo">
-</section>
-
-
-
-
-
-
-
-<footer>
+<footer class="footabt">
 </footer>
+
+
+</body>
+</html>
