--- a/finalproblem.html
+++ b/finalproblem.html
@@ -18,7 +18,7 @@ Final Project: FUTURE CAREER CHOICE
 
 
   <nav class="navprob"> 
-  On this page you will be reading about an Ethical dilemma.
+  On this page you will be reading about what I want to do with my life
  </nav>
 
 
