--- a/finalproblem.html
+++ b/finalproblem.html
@@ -18,11 +18,22 @@ Final Project: FUTURE CAREER CHOICE
 
 
   <nav class="navprob"> 
-  On this page you will be reading about what I want to do with my life
+  On this page you will be reading about what I want to do with my life, where I want to go, and my plans for after high school,
+     college, and everything after.
  </nav>
 
 
 <aside class="siderprob"> 
+   <h1 class= "nolanws"> Nolan Ryan Wolrd Series </h1>
+   <p> One of the best memories of my short teenaged life must be the winning the Nolan Ryan World Series, and simply my entire 
+     All Star career at Hollenbeck Park. It first started in a pre-season tourney on Independence Day. This was our first weekend
+      together, first of many. We gelled quickly, and are already as close as brothers. We breeze through our first two games, 
+      mercying overrated travelball teams. Next we play ourselves for the championship. We were the 13 year old team, and we were
+      squaring off againts our older version of our all star team. The game is close and tense and we end up beating our older 
+      rivals by one run. Little did we know, people were scouting our team, and it was a quialifyer for a World Series. After 
+      placing top 4 in califonia, we went onto a post season. The Nolan Ryan World Series. We fight hard, and win the World 
+      Series. I win the Silver Slugger award, an award presented to the best slugger in the tournament, as well as a championship
+      ring. </p>
 </aside>
 
 <main class="mainprob">
