--- a/finalproblem.html
+++ b/finalproblem.html
@@ -37,7 +37,16 @@ Final Project: FUTURE CAREER CHOICE
 </aside>
 
 <main class="mainprob">
-</main>
+   <h1 class="posths"> Post Highscool Goals </h1>
+   <p>
+      I am currently attending Covina High School, and I am already setting myself up for degrees in college. I am paying close 
+      attention to the classes I am currently taking, and what classes I will take to finish up my years at Covina. Hopefully, 
+      I will make the right decisions in classes in order to improve my chances in attending a university, or high accidemic 
+      college. I plan on attending a UC, or a decent Devision 1 baseball school. My dream college would either be Vanderbilt, 
+      Cal State fullerton, or even UCSD. I plan on majoring in Kineseology, whch is the study of sports and bodily movements,
+      minor in Engineering. 
+   </p>
+   </main>
 
 
 <aside class="siderprob"> 
@@ -53,6 +62,15 @@ Final Project: FUTURE CAREER CHOICE
 
 
 <section class= "maintwoprob">
+   <h1 class="career"> Post College/Career </h1>
+   <p> Whilst using my minor and majors, I hope to persue a career in sports. I hope to follow in my brothers footsteps and
+      become a coach. My brother is the oldest of my half siblings, and is the assistant coach at Pomona-Pitzer College. I hope
+      to do the same and become a college assistant, or even head coach. I feel this career coice would be suitable for me, 
+      mainly due to the fact I already know so much fundementals and advanced technique in both baseball and basketball. I help
+      out my less experienced teammates in order to make my team better and overall the entire program of the sport better.
+      Say this dosen't work out, I have my engineering degree which will be very helpful in the new world. The new world filled 
+      with high competition and vastly reliable in technolgy. Over all, however the dice ends up rolling, I hope to impact other 
+      peoples lives and make the world a better place </p>
 </section>
 
 
